# banking-stream-enrichment

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: banking_batch_dag.py
data_generation/: corruption.py  generator.py  manifest.py  profiler.py  run.py
dbt/: .user.yml  dbt_project.yml  profiles.yml.example
dbt/models/marts/: _marts__models.yml  fct_enriched_transactions.sql
dbt/models/staging/berka/: _berka__models.yml  _berka__sources.yml  stg_berka__account.sql  stg_berka__client.sql  stg_berka__disposition.sql  stg_berka__district.sql  stg_berka__trans.sql
docs/: corruption_manifest.json  data_dictionary.md  load_test_results.md
docs/decisions/: 001-stream-table-join-not-lambda.md  002-berka-only-no-ibm-aml.md  003-synthetic-data-generation.md  004-deploy-once-no-cloud-sql.md  005-airflow3-taskflow-migration.md  006-staging-table-dedup-load-test.md
infra/debezium/: connector-config.json
infra/postgres/: load_berka.py  load_trans_loadtest.py
infra/postgres/init/: 001_create_berka_schema.sql
speed_layer/: consumer.py  dead_letter.py  enrichment.py  run.py  state_manager.py
tests/integration/: test_pipeline_corruption_rate.py
tests/unit/: test_corruption.py  test_enrichment.py  test_generator.py
