[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "banking-stream-enrichment"
version = "0.1.0"
description = "Real-time transaction enrichment pipeline using Berka dataset"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools]
packages = ["speed_layer", "data_generation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
